--- a/sentence_splitter/latex/nlp-homework-2.tex
+++ b/sentence_splitter/latex/nlp-homework-2.tex
@@ -19,7 +19,7 @@
 	Sentence Splitter\\
 	\large Multilingual Natural Language Processing \\
 	Homework 2}
-\date{August $10^{th}$, 2025}
+\date{August 10th, 2025}
 
 \author{Ercoli Fabio Massimo \\
 \texttt{802397} \\\And
@@ -45,11 +45,13 @@ According to \cite{redaelli-sprugnoli-2024-sentence} we can add to the list:
 \begin{itemize}
 	\item Multilinguality
 \end{itemize}
-A sentence splitting approach that works well for English may not work well to split another language. \newline In this project we implemented two types of models for sentence splitting, using an Italian corpus as train and validation set.
+A sentence splitting approach that works well for English may not work well for splitting text in another language.
+
+In this project we implemented two types of models for sentence splitting, using an Italian corpus as train and validation set.
 The first kind is based on embedding models, the second is based on generative LLMs.
 We aim to analyze and compare the two approaches. 
 We also plan to test the models out of the original domain of training. 
-The training model is a golden-annotated text from I Promessi Sposi (Quarantana) by Manzoni.
+The training data consists of golden-annotated text from I Promessi Sposi (Quarantana) by Manzoni.
 
 \section{Methodology}
 
@@ -65,12 +67,20 @@ With the constraint that the number of tokens of each sequence must fit the max 
 for instance 512.
 
 We generated a dataset using sequences of 192 words each. Notice that the number of tokens for each sequence will be strictly greater,
-since for each word the tokenizer of the model will produce one or more tokens. \newline Before using the datasets, we still need to align (as mentioned above) the labels to the tokens.
+since for each word the tokenizer of the model will produce one or more tokens.
+
+Before using the datasets, we still need to align (as mentioned above) the labels to the tokens.
 The alignment strategy we applied consists of keeping 1 as the first token generated from a word
-having label 1, and using 0 for all the other cases. \newline One aspect that we had to address was the fact that the label distribution is very unbalanced
-for this use case. Most of the labels are 0s, and few are 1s. We applied 2 different strategies. \newline First, we set the \textbf{load\_best\_model\_at\_end} training argument to \textbf{true},
+having label 1, and using 0 for all the other cases.
+
+One aspect that we had to address was the fact that the label distribution is very unbalanced
+for this use case. Most of the labels are 0s, and few are 1s. We applied 2 different strategies.
+
+First, we set the \textbf{load\_best\_model\_at\_end} training argument to \textbf{true},
 using \textbf{metric\_for\_best\_model} set to F1. This implements early stopping based on F1,
-rather than on accuracy (which would be misleading for such an unbalanced dataset). \newline Second, we overrode the loss function to weight misclassification of class 1 (end of sentence) 30× more than class 0. 
+rather than on accuracy (which would be misleading for such an unbalanced dataset).
+
+Second, we overrode the loss function to weight misclassification of class 1 (end of sentence) 30× more than class 0.
 This weighting factor was motivated by the label distribution (96.7\% class 0 vs 3.3\% class 1). 
 We implemented this using a custom weighted trainer. 
 
@@ -78,7 +88,9 @@ During inference, we don't need to align the labels, since the labels are genera
 
 \subsection{LLM-based}
 
-Fine-tuning an LLM is usually prohibitive or impossible using modest hardware, such as a single GPU with 16 GB / 24 GB RAM. So we applied two techniques to reduce the amount of memory required (and also the time) to fine-tune the models: LoRA (Low-Rank Adaptation) and parameter quantization.
+Fine-tuning LLMs is often prohibitive on modest hardware, such as a single GPU with 16 GB or 24 GB RAM. Therefore, we applied two techniques to reduce the memory requirements and training time: LoRA (Low-Rank Adaptation) and parameter quantization.
+
+LoRA works by freezing the original model weights and introducing trainable low-rank decomposition matrices, significantly reducing the number of trainable parameters. We used 4-bit quantization (BNB-4bit) to further reduce memory usage by representing model weights with lower precision while maintaining performance.
 
 A special focus was given to creating good prompts for both the training and inference phases.
 We first generated new datasets from the ones we used for the embedding-based solution, in which 
@@ -147,7 +159,7 @@ We tested the in-domain novel (Quarantana) and 3 novels (Pinocchio, I Malavoglia
 
 \subsection{Out of Domain Evaluation: Test Dataset}
 
-We'll try the test set on the two best embedding-bases models
+We'll try the test set on the two best embedding-based models
 (according to the eval dataset results), Italian BERT XXL and Italian ELECTRA and
 one LLM-based model (Minerva 7B Instruct v1.0).
 
@@ -157,15 +169,15 @@ one LLM-based model (Minerva 7B Instruct v1.0).
 
 \begin{table}[]
 	\small
-	\caption{Best F1-epoch Embedding-based}
+	\caption{Embedding-based Models: Best Epoch Performance on Validation Set}
 	\begin{tabular}{llll}
-		Models & Best Epoch & F1 & Valid loss \\
+		Models & Best Epoch & F1 & Loss \\
 		BERT base cased & 6      & 0.9922        & 0.0014                  \\
 		ModernBERT base ITA  & 12      & 0.9938        & 0.0097                  \\
 		BERT base ITA XXL cased & 11      & 0.9922        & 0.0021                 \\
 		XLM RoBERTa base & 4       & 0.9953        & 0.0014                  \\
 		XLM RoBERTa large & 12       & 0.9953       & 0.0087                 \\
-		Electra ITA XXL disc. & 20       & 0.9953        & 0.0015                
+		Electra ITA XXL disc. & 20       & 0.9953        & 0.0015                \\
 	\end{tabular}
 	\label{t1}
 \end{table}
@@ -197,17 +209,22 @@ On training, the F1s on the validation set look very good.
 When we evaluate the same models on different novels we got the
 result reported in table \ref{t2}.
 
-According to our tests, multilingual base models (XLM RoBERTa base and large)
-got very bad results, even in the same domain (Quarantana).
+According to our tests, multilingual models (XLM-RoBERTa base and large) performed poorly, even in the same domain (Quarantana).
+This poor performance might be attributed to the multilingual models' distributed attention across many languages,
+making them less effective for language-specific tasks compared to monolingual or Italian-specific models.
 
-It seems to be better to use BERT base, even if it is not trained on Italian.
-This base model, like ModernBERT ITA, works very good in domain (Quarantana) and
+Interestingly, BERT base (not specifically trained on Italian) outperformed the multilingual models,
+suggesting that the general language understanding capabilities of BERT transfer better to Italian sentence splitting than the multilingual approach.
+This base model, like ModernBERT ITA, works very well in domain (Quarantana) and
 decently out of domain (other novels).
 
 BERT ITA XXL and Electra ITA XXL got great results both in domain and out of domain.
 
-The novel that seems to be the most difficult to split for all models is I Malavoglia.
-Best result is usually achieved in domain (as expected).
+Among the out-of-domain novels, I Malavoglia appears to be the most challenging for sentence splitting across all models.
+This could be due to Verga's distinctive writing style, which includes frequent use of dialogue and regional expressions that may differ significantly from Manzoni's more formal narrative style used in training.
+
+As expected, the best results are consistently achieved on the in-domain novel (Quarantana),
+demonstrating the importance of domain similarity for optimal performance.
 
 \subsection{Out of Domain Evaluation: Test Dataset}
 
@@ -222,16 +239,17 @@ trained models (seeing those as immutable instances).
 		Models & Type & F1 \\
 		BERT ITA XXL & embedding-based & 0.8770 \\
 		Electra ITA XXL & embedding-based & 0.8994 \\
-		Minerva 7B Instruct v1.0 B & LLM-based & 0.7445
+		Minerva 7B Instruct v1.0 & LLM-based & 0.7445 \\
 	\end{tabular}
 	\label{t3}
 \end{table}
 
-From the F1 score we computed, see table \ref{t3},
-embedding-based models (carefoully choosen) perform better
-than large LLM-based model.
+From the F1 scores we computed (see table \ref{t3}),
+carefully chosen embedding-based models consistently outperform the LLM-based approach.
+The Italian ELECTRA model achieved the highest F1 score of 0.8994, followed closely by Italian BERT XXL at 0.8770,
+while the Minerva 7B model reached 0.7445.
 
-Also LLM-based models have a series of further issues:
+Furthermore, LLM-based models have a series of further issues:
 
 \begin{itemize}
  	\item they are one order of magnitude slower than embedding-based
@@ -265,7 +283,7 @@ All the models classified `;` as 0. Other cases are still about
 the presence of the sign `;`.
 
 Looking at the log of the `sentence\_splitter\_out\_of\_domain\_test\_generative.ipynb'
-we can see at some few hallucinations (not possible with embedding-bases models).
+we can see a few hallucinations (not possible with embedding-based models).
 
 Some words have been transformed by the model, for instance 
 `messe` has been reported in the output as `mise` or `trasfigurito`
@@ -276,35 +294,26 @@ the output only should refer to the input words!)
 One allucination is about portion of the sequence
 are not present (they were not reported in the output),
 but this fenoumenon seems to be quite rare.
-A word (`Sì! –`) in the input has been completed 
+A word (`Sì! –`) in the input has been completed forgotten
 by the model to produce the output.
 
 \section{Conclusions}
 
-The embedding base models are very efficient (they usually require a
-number of parameter at least 1 order magnitude less than the LLM-based ones).
-Also if a good base Italian model is chosen (for instance BERT ITA XXL)
-results are great both in domain and out of domain.
+The embedding-based models demonstrate superior efficiency, requiring at least one order of magnitude fewer parameters than LLM-based approaches. When a well-suited Italian model is chosen (such as BERT ITA XXL or Italian ELECTRA), results are excellent both in-domain and out-of-domain, with F1 scores consistently above 0.87 on the test set.
 
-The LLM-based ones also seem to provide good results in terms of quality, but they can hallucinate, while it is simply not possible using an embedding-based approach.
+The LLM-based approaches also provide reasonable results in terms of quality, but they suffer from hallucination issues, which are impossible with embedding-based approaches due to their discriminative nature.
 
-Moreover, the latter are much more heavy to train and to use at inference time.
+Moreover, LLMs are significantly more resource-intensive to train and deploy, requiring specialized hardware even for inference.
 
 With the only exception of qwen3-4b-unsloth-bnb-4bit that takes 5 minutes
 to be trained the other take from 40 minutes to 1 hour to be trained,
 on a max memory GPU of 22.069 GB.
 
-Furthermore,
-we had to use LoRA and the parameter quantization in order to train the models
-on a modest hardware.
+Moreover, we had to use LoRA and parameter quantization in order to train the models on modest hardware.
 
-All in all, the team has thinks that using an embedding based model
-would be better the natural choice to address the sentence splitting use case.
+All in all, the team thinks that using an embedding-based model would be the natural choice to address the sentence splitting use case.
 
-The AI seems to follow the common software engineer rule:
-there is no common receip for everthing:
-LLMs work grate for a lot of use cases, but not in
-all the case.
+This follows the common software engineering principle: there is no universal solution for everything. LLMs work great for many use cases, but not in all cases.
 
 \appendix
 
@@ -395,9 +404,6 @@ The main Dataset to train the embedding-based models and LLM-based model are:
     \item \href{https://huggingface.co/datasets/fax4ever/sentence-splitter-ood-128}{sentence-splitter-ood-128}
 \end{itemize}
 
-Those are strictly derived from the CSVs files that were provided to do the Homework.
-No other data then that was used to train the models.
-
 \section{Indeterminism Appendix}
 \label{sec:appendix3}
 
@@ -408,11 +414,11 @@ Making all deterministic would have affected too much the performance.
 So, it means that if you run everything from scratch, you could find slightly different results.
 
 For instance the second time we re-trained everything from scratch we got different results
-for the out of domain evaluations, see Table \ref{t3}.
+for the out of domain evaluations, see Table \ref{t4}.
 
 \begin{table}[]
 	\small
-	\caption{Out-Of-Domain Evaluation: Embedding-based (TAKE-2!)}
+	\caption{Out-Of-Domain Evaluation: F1 Scores on Different Novels (Second Run)}
 	\begin{tabular}{lllll}
 		Models & Quara. & Pinocc. & Malav. & Cuore \\
 		BERT base cased & 0.9859      & 0.8854 & 0.7826        & 0.9364                 \\
